Bug 141313 - "Enable remote control" is unavailable in Impress options on macOS
Summary: "Enable remote control" is unavailable in Impress options on macOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.1.2 release
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2 tar...
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2021-03-29 07:25 UTC by Mike Kaganski
Modified: 2022-06-30 06:48 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2021-03-29 07:25:02 UTC
Enable Presenter Console is unavailable in Impress options on macOS in version 7.1 - see https://ask.libreoffice.org/en/question/300796/how-can-i-set-up-impress-remote-on-macos/

Looks related to disabling Bluetooth when using SDK 10.15 (see bug 138122).

Anyway, regardless of Bluetooth availability, the configuration should be still available, because the remote is also available using WiFi.

Ref: https://opengrok.libreoffice.org/xref/core/configure.ac?r=89af2407#11401
Ref: https://opengrok.libreoffice.org/xref/core/sd/source/ui/dlg/tpoption.cxx?r=951b243f#499
Comment 1 Mike Kaganski 2021-03-29 07:48:57 UTC
Disabling the control depending on Bluetooth support:
  https://git.libreoffice.org/core/+/4cdb960a79aff565f956f618116f3ea4b3836aa4

Disabling Bluetooth depending on SDK version on macOS:
  https://git.libreoffice.org/core/+/1e95c8dd006147f7a94e24135396277ee2f469b8
  https://git.libreoffice.org/core/+/d0ca3064b05c477484c100c9d374b52d5e4ec454

No idea if a commit in Chromium related to the deprecation of that API is helpful, but just in case:
  https://chromium.googlesource.com/chromium/src.git/+/07aa6dca25c20da6a14d96eca46b8b4b639c5117
Comment 2 steve 2021-03-29 08:12:14 UTC
Confirming: LO Impress > menubar > Slideshow > Impress remote menu option is greyed out and not selectable. Setting to NEW.
Comment 3 How can I remove my account? 2021-03-29 09:04:47 UTC Comment hidden (obsolete)
Comment 4 Mike Kaganski 2021-03-29 09:07:09 UTC
(In reply to Tor Lillqvist from comment #3)
> Isn't "presenter console" another thing, not related to the remove control
> thing?

OMG - I have used the wrong element name all this time! It indeed is about Remote Control, and I have mislead you with that wrong copy-pasted wording. I'm very sorry! I have fixed the title.
Comment 5 Aron Budea 2021-05-07 02:46:39 UTC
May I ask why bug 138122 is in See Also? Are the two related in some ways?
Comment 6 Mike Kaganski 2021-05-07 05:50:21 UTC
(In reply to Aron Budea from comment #5)

Please read comment 0:

> Looks related to disabling Bluetooth when using SDK 10.15 (see bug 138122).
Comment 7 Aron Budea 2021-05-07 06:09:18 UTC
Oh, I missed that line, my bad.
Comment 8 Uwe Altmann 2021-09-24 09:50:10 UTC
Yet missing in LO 6.4.7
Comment 9 Commit Notification 2022-06-30 06:43:09 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f07313272267316d20409d51ad01482b23772e06

tdf#141313 only hide Impress Remote option if there is no sdremote at all

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-06-30 06:44:20 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/f1c415c638f11329b9cd7b415aefa4652499403a

tdf#141313 only hide Impress Remote option if there is no sdremote at all

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.