tdf#141313 only hide Impress Remote option if there is no sdremote at all

it was incorrectly based on bluetooth support, but the remote can also
be used in the local network.
Regression from 4cdb960a79aff565f956f618116f3ea4b3836aa4 still worked
for users who had it enabled in earlier versions, but not with new
profiles.

Change-Id: Ib4026c60fed0842b3bad483d78e46dd73d1d75f5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136615
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
(cherry picked from commit d121e7cdd408fa5afb73b16466df42baa52b6a1a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136643
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>